--- a/Audio/index.html
+++ b/Audio/index.html
@@ -7,6 +7,7 @@
     <body>
 
         <button id="playStopButton" class="button">Play</button>
+        <button id="testButton" class="button">Test</button>
         
         <script src="textToSpeech.js"></script>
         <!--------------------------------------->
