--- a/Audio/index.html
+++ b/Audio/index.html
@@ -8,6 +8,11 @@
 
         <button id="playStopButton" class="button">Play</button>
         <button id="testButton" class="button">Test</button>
+
+        <div id="gainContainer"> Gain
+            <input type="range" min="0" max="100" value="10" class="slider" id="gainSlider">
+            <span id="gainOutput">1.0 dB</span>
+        </div>
         
         <script src="textToSpeech.js"></script>
         <!--------------------------------------->
