new file system, fixed some server stuff, added pan
wenn das alles im selben Ordner liegt, refresht sich die Seite immer automatisch, wenn man einen neue wav Datei erzeugt (wegen reload on save)

--- a/Audio/index.html
+++ b/Audio/index.html
@@ -13,6 +13,11 @@
             <input type="range" min="0" max="100" value="10" class="slider" id="gainSlider">
             <span id="gainOutput">1.0 dB</span>
         </div>
+
+        <div id="panningContainer"> Panning
+            <input type="range" min="0" max="100" value="50" class="slider" id="panningSlider">
+            <span id="panningOutput">0 LR</span>
+        </div>
         
         <script src="textToSpeech.js"></script>
         <!--------------------------------------->
