--- a/Audio/index.html
+++ b/Audio/index.html
@@ -9,6 +9,16 @@
         <button id="playStopButton" class="button">Play</button>
         <button id="testButton" class="button">Test</button>
 
+        <div id="reverbContainer"> Reverb
+            <select id="selectList">
+                <option value="none">None</option>
+                <option value="cave">Cave</option>
+                <option value="church">Church</option>
+                <option value="garage">Garage</option>
+                <option value="room">Room</option>
+            </select>
+        </div>
+
         <div id="gainContainer"> Gain
             <input type="range" min="0" max="100" value="10" class="slider" id="gainSlider">
             <span id="gainOutput">1.0 dB</span>
